Adding S3 tests + fixing found errors