@@ -11,15 +11,14 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import ru.rerumu.backups.factories.S3ClientFactory;
 import ru.rerumu.backups.models.S3Storage;
-import ru.rerumu.backups.services.s3.S3Service;
 import ru.rerumu.backups.services.s3.impl.ListCallable;
+import ru.rerumu.backups.services.s3.impl.MultipartDownloadCallable;
+import ru.rerumu.backups.services.s3.impl.MultipartUploadCallable;
 import ru.rerumu.backups.services.s3.impl.OnepartUploadCallable;
-import ru.rerumu.backups.services.s3.impl.S3ServiceImpl;
 import software.amazon.awssdk.auth.credentials.StaticCredentialsProvider;
 import software.amazon.awssdk.regions.Region;
 import software.amazon.awssdk.services.s3.S3Client;
 
-import java.io.IOException;
 import java.net.URI;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
@@ -27,31 +26,40 @@ import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.nio.file.StandardOpenOption;
 import java.util.List;
+import java.util.Random;
+import java.util.UUID;
 import java.util.concurrent.Callable;
 
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.when;
 
 @ExtendWith(MockitoExtension.class)
-public class ITS3 {
+public class ITS3Download {
 
     @Mock
     S3ClientFactory s3ClientFactory;
 
+
     @Test
-    void shouldUpload(@TempDir Path tempDir ) throws Exception {
+    void shouldDownload(@TempDir Path tempDir ) throws Exception {
         ch.qos.logback.classic.Logger logger = (ch.qos.logback.classic.Logger) LoggerFactory.getLogger(Logger.ROOT_LOGGER_NAME);
         logger.setLevel(Level.TRACE);
         logger = (ch.qos.logback.classic.Logger)LoggerFactory.getLogger(software.amazon.awssdk.core.interceptor.ExecutionInterceptorChain.class);
         logger.setLevel(Level.INFO);
+        logger = (ch.qos.logback.classic.Logger)LoggerFactory.getLogger(software.amazon.awssdk.core.internal.io.AwsChunkedEncodingInputStream.class);
+        logger.setLevel(Level.INFO);
+        logger = (ch.qos.logback.classic.Logger)LoggerFactory.getLogger(software.amazon.awssdk.auth.signer.Aws4Signer.class);
+        logger.setLevel(Level.INFO);
+
+        String prefix = UUID.randomUUID().toString();
 
         S3Storage s3Storage = new S3Storage(
-                Region.of(System.getProperty("region")),
-                System.getProperty("bucket"),
-                System.getProperty("keyId"),
-                System.getProperty("secretKey"),
+                Region.AWS_GLOBAL,
+                "test",
+                "1111",
+                "1111",
                 Paths.get("level-0"),
-                new URI(System.getProperty("endpoint")),
+                new URI("http://localhost:9090/"),
                 "STANDARD"
         );
 
@@ -64,35 +72,50 @@ public class ITS3 {
                                 .build()
                 );
 
-        Files.writeString(
+        byte[] data = new byte[30_000_000];
+
+        new Random().nextBytes(data);
+
+        Files.write(
                 tempDir.resolve("test.txt"),
-                "Test",
-                StandardCharsets.UTF_8,
+                data,
                 StandardOpenOption.CREATE,
                 StandardOpenOption.TRUNCATE_EXISTING,
                 StandardOpenOption.WRITE
         );
 
-        var onepartUpload = new OnepartUploadCallable(
+        new MultipartUploadCallable(
                 tempDir.resolve("test.txt"),
-                "test.txt",
+                prefix+".part1",
+                s3Storage,
+                s3ClientFactory,
+                12_000_000
+        ).call();
+
+
+        List<String> res = new ListCallable(
+                prefix+".part1",
                 s3Storage,
                 s3ClientFactory
-        );
-
-        onepartUpload.call();
+        ).call();
 
 
-        Callable<List<String>> listCallable = new ListCallable(
-            "test.txt",
+        Assertions.assertEquals(List.of(prefix+".part1"),res);
+
+
+        new MultipartDownloadCallable(
+                tempDir.resolve("res.txt"),
+                prefix+".part1",
                 s3Storage,
-                s3ClientFactory
-        );
+                s3ClientFactory,
+                12_000_000
+        ).call();
 
-        List<String> res = listCallable.call();
+        Assertions.assertTrue(Files.exists(tempDir.resolve("res.txt")));
 
-        Assertions.assertEquals(List.of("test.txt"),res);
+        byte[] resBytes = Files.readAllBytes(tempDir.resolve("res.txt"));
 
-
+        Assertions.assertArrayEquals(data, resBytes);
     }
+
 }
